Ensure the tracking term form looks presentable on mobiles.
- Note: It is not very usable on mobile.

--- a/src/App.scss
+++ b/src/App.scss
@@ -21,6 +21,9 @@
   background: #f0e9d8;
   border: 1px solid #3d3fa0;
   padding: 5px;
+  width: 40%;
+  min-width: 350px;
+  max-width: 100vw;
 }
 
 .tracking-term-input {
@@ -35,8 +38,8 @@
 #tracking-term {
   height: 1.8rem;
   font-size: 1.1rem;
-  width: 30%;
-  min-width: 400px;
+  width: 100%;
+  max-width: 100vw;
   border: none;
   border-bottom: 1px solid #3d3fa0;
   background: darken(#f0e9d8, 5%);
